@@ -134,7 +134,6 @@ button:hover, a:hover {
 	flex-direction: row;
 	justify-content: center;
 	flex-wrap: wrap;
-	margin: -1%;
 }
 
 .gallery > img {
@@ -148,6 +147,7 @@ button:hover, a:hover {
 
 .pdf-link {
 	border: var(--focus-border);
+	cursor: pointer;
 }
 
 .pdf-link:hover, .pdf-link:active {
@@ -186,6 +186,7 @@ button:hover, a:hover {
 
 #popup-pdf {
 	height: 100vh;
+	padding-bottom: 3rem;
 }
 
 #popup-image-text {
@@ -291,6 +292,13 @@ main {
 	box-sizing: border-box;
 	overflow-x: hidden;
 	padding: 2rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.lesson-content > * {
+	max-width: 60rem;
 }
 
 #start-btn {
@@ -314,6 +322,7 @@ body.choice-view .lesson-content {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	align-items: start;
 	margin-left: -1rem;
 	margin-right: -1rem;
 	border: none;
@@ -325,6 +334,7 @@ body.choice-view .lesson-content {
 
 body.choice-view .lesson-content > * {
 	width: 30rem;
+	height: 100%;
 	margin-left: 1rem;
 	margin-right: 1rem;
 	border: var(--focus-border);
@@ -357,8 +367,8 @@ body.resource-view .lesson-content {
 }
 
 body.resource-view .lesson-content > * {
-	width: 20rem;
-	height: 20rem;
+	width: 18rem;
+	height: 18rem;
 	margin: 1rem;
 	border: var(--focus-border);
 }
@@ -366,7 +376,17 @@ body.resource-view .lesson-content > * {
 /* Inner content styles */
 
 main p {
+	padding: 1rem 0;
+	margin: 0;
+	box-sizing: content-box;
+}
 
+main video {
+	margin: 1rem 0;
+}
+
+main h1 {
+	width: 100%;
 }
 
 @media screen and (orientation:portrait) {
